# pyproject.toml

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
authors = [{ name = "Artem Butusov", email = "art.sormy@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "API and CLI for Ecosense RadonEye devices"
dynamic = ["dependencies"]
keywords = ["Ecosense", "RadonEye", "RD200"]
license = { file = "LICENSE" }
name = "radoneye"
readme = "README.md"
requires-python = ">=3.9"
version = "2.0.3"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/sormy/radoneye"
Issues = "https://github.com/sormy/radoneye/issues"

[project.scripts]
radoneye = "radoneye.__main__:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501"]

[tool.pytest.ini_options]
addopts = "--cov=radoneye --cov-report html:coverage -s -v"
